objects/Census__c.object
<CustomObject>
    <fields>
        <fullName>Active_In_Active_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active/In-Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Member_Count__c</fullName>
        <description>Displays the count of Active members for the census</description>
        <label>Active Member Count</label>
        <summaryFilterItems>
            <field>Census_Members__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity_Type__c</fullName>
        <formula>Text(CaseID__r.Account.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_Age__c</fullName>
        <description>Displays the average age of everyone in the Census. This field gets populated via the CensusMembersTrigger</description>
        <label>Average Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only an &apos;RFP Intake Case&apos; can be associated to this record</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>RFP Intake Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Census</relationshipLabel>
        <relationshipName>Census</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Census_JSON_Response1__c</fullName>
        <description>This field is used to store the additional JSON response when NLP response length exceeds maximum field limit for Census JSON Response field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Census JSON Response1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Census_JSON_Response__c</fullName>
        <description>This field is used to store the entire JSON message from NLP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Census JSON Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Count__c</fullName>
        <description>Displays the count of Dependent members in the Census</description>
        <label>Total Dependent Count</label>
        <summaryFilterItems>
            <field>Census_Members__c.Type__c</field>
            <operation>notEqual</operation>
            <value>subscriber</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Document_link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Female_Count__c</fullName>
        <description>Displays the count of Female members in the Census.</description>
        <label>Total Female</label>
        <summaryFilterItems>
            <field>Census_Members__c.Gender__c</field>
            <operation>equals</operation>
            <value>F</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Male_Count__c</fullName>
        <description>Displays the count of Male members in the Census</description>
        <label>Total Male</label>
        <summaryFilterItems>
            <field>Census_Members__c.Gender__c</field>
            <operation>equals</operation>
            <value>M</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Below20__c</fullName>
        <description>Displays the count of Census Members with age less than or equal to 20.</description>
        <label>Member below 20</label>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>lessOrEqual</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Btw_2030__c</fullName>
        <description>Displays the count of Census members whose age is between 20 and 30.</description>
        <label>Member Between 21 and 30</label>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Btw_3040__c</fullName>
        <description>Displays the count of Census members whose age is between 30 and 40.</description>
        <label>Member Between 31 and 40</label>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>30</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>lessOrEqual</operation>
            <value>40</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Btw_4050__c</fullName>
        <description>Displays the count of Census members whose age is between 30 and 40.</description>
        <label>Member Between 41 and 50</label>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>40</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>lessOrEqual</operation>
            <value>50</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Over_60__c</fullName>
        <description>Displays the count of Census members whose age is more than 60.</description>
        <label>Member Over 60</label>
        <summaryFilterItems>
            <field>Census_Members__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>60</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NLP_Processing_Failure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NLP Processing Failure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>No_EK__c</fullName>
        <description>Display the count of Census Members who has Employee+Children coverage.</description>
        <label>Number EC (Employee + Children)</label>
        <summaryFilterItems>
            <field>Census_Members__c.Coverage_Level__c</field>
            <operation>equals</operation>
            <value>EC</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_ES__c</fullName>
        <description>Display the count of Census Members who has Employee + Spouse coverage</description>
        <label>Number ES (Employee + Spouse)</label>
        <summaryFilterItems>
            <field>Census_Members__c.Coverage_Level__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Census</relationshipLabel>
        <relationshipName>Census</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Count__c</fullName>
        <description>Displays the count of Primary Subscribers.</description>
        <label>Total Subscriber Count</label>
        <summaryFilterItems>
            <field>Census_Members__c.Type__c</field>
            <operation>equals</operation>
            <value>subscriber</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plan_Count__c</fullName>
        <description>This field holds the total plans information and gets updated via the CensusMembersTrigger</description>
        <label>Total Plans</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Family_Plans__c</fullName>
        <description>Displays the count of members covered in the Family plans.</description>
        <label>Total Family Plans</label>
        <summaryFilterItems>
            <field>Census_Members__c.Plan_Type__c</field>
            <operation>contains</operation>
            <value>Family</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Ind_Plans__c</fullName>
        <description>Displays the count of members covered in the Individual plans</description>
        <label>Total Individual Plans</label>
        <summaryFilterItems>
            <field>Census_Members__c.Plan_Type__c</field>
            <operation>equals</operation>
            <value>Individual Only</value>
        </summaryFilterItems>
        <summaryForeignKey>Census_Members__c.CensusID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Census</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Census Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Census</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>